--- a/src/content/appearanceThemes/appearance-theme-default.css
+++ b/src/content/appearanceThemes/appearance-theme-default.css
@@ -79,10 +79,14 @@
     /* Most Bloom books are too small to need a gutter. NB: THIS MUST HAVE UNITS even when 0, else calc() fails */
     --page-gutter: 0mm;
 
+    --page-margin: 12mm;
+
     /* padding-top: value in .bloom-page.outsideFrontCover and .bloom-page.outsideBackCover */
-    --cover-margin-top: 12mm; /* same default value as --page-margin-top, but used for outside cover pages */
+    --cover-margin-top: var(--page-margin); /* same default value as --page-margin-top, but used for outside cover pages */
     /* padding-bottom: value in .bloom-page.outsideFrontCover and .bloom-page.outsideBackCover */
-    --cover-margin-bottom: 12mm; /* same default value as --page-margin-bottom, but used for outside cover pages */
+    --cover-margin-bottom: var(--page-margin); /* same default value as --page-margin-bottom, but used for outside cover pages */
+    /* padding-left: and padding-right: value in .bloom-page.outsideFrontCover and .bloom-page.outsideBackCover */
+    --cover-margin-side: var(--page-margin); /* same default value as --page-margin-left and --page-margin-right, but used for outside cover pages */
     /* display: value in .coverBottomBookTopic */
     --cover-topic-show: doShow-css-will-ignore-this-and-use-default; /* default is topic displaying (the value is a self-documenting trick) */
     /* display: value in .coverBottomLangName */
@@ -105,8 +109,6 @@
     /* border-width: value in .numberedPage .marginBox */
     --marginBox-border-width: medium; /* must not be 0px/0mm/0in to have a border. 'medium' is a keyword. */
 
-    --page-margin: 12mm;
-
     /* In some themes, at edit-
     time, the format button lands under the page number. See BL-13206. The name is is intentionally vague about direction and what we do with it. */
     --formatButton-pageNumber-dodge: 0;
@@ -118,28 +120,31 @@
     --marginBox-background-color: transparent;
 }
 
-/* Beware of making these rules more specific. We want them to be able to be overriden by .bloom-page rules
+/* Beware of making these rules more specific. We want them to be able to be overridden by .bloom-page rules
  * that come from other themes (and hence later in the generated appearance.css file).
  */
-.A4Landscape {
-    --page-margin-top: 12mm;
-    --page-margin-bottom: 12mm;
-    --page-margin-right: 15mm;
-    --page-margin-left: 15mm;
+ .A3Landscape,
+ .A3Portrait,
+ .A4Landscape,
+ .A4Portrait,
+ .B5Portrait,
+ .LetterLandscape,
+ .LetterPortrait,
+ .LegalLandscape,
+ .LegalLandscape {
+    --page-margin: 15mm;
+    --page-gutter: 10mm;
 }
-.A4Portrait {
-    --page-margin-top: 15mm;
-    --page-margin-bottom: 15mm;
-    --page-margin-right: 12mm;
-    --page-margin-left: 12mm;
-}
-
 .HalfLetterPortrait,/* SIL Mexico says use same as A5 */
 .HalfLetterLandscape,
 .A5Landscape,
-.A5Portrait {
-    --page-margin: 10mm;
+.A5Portrait,
+.Size6x9Landscape,
+.Size6x9Portrait {
+    --page-margin: 12mm;
 }
+.QuarterLetterPortrait,
+.QuarterLetterLandscape,
 .A6Portrait,
 .A6Landscape {
     --page-margin: 10mm;
